Authetication Refactor
